2009-01-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac test/Makefile.am test/finaltest/Makefile.am
	  test/finaltest/finalcheck.sh:
	Added confirmation of all test success

2009-01-26  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2531609 ] CIM_ListenerDestinationCIMXML not enforcing "Required"

2009-01-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c
	[ 2521173 ] DST being handled incorrectly

2009-01-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am fileRepository.c fileRepository.h objectImpl.c
	  objectImpl.h sfcbrepos.sh.in sfcbinst2mof.c(new file):
	[ 2140807 ] Indication subscriptions don't persist across sfcbrepos
	(patch by Norm Paxton)

2009-01-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c:
	[ 2494774 ] getControlChars/getControlNum calls sometimes segfault

2008-12-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.c msgqueue.c sfcb.cfg.pre.in:
	[ 2407344 ] Message size should be checked for a reasonable value. 

2008-12-18 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c pam/sfcb: 
	[ 2412189 ] More flexible access control with unix socket connections
	(patch by J. Bart Whitely)

2008-12-18 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlRequest.c cimslpCMPI.c classProvider.c classSchema2c.c
	  providerDrv.c sfcbdump.c sfcbdumpP32onI32.c:
	[ 2390515 ] Fix multiple resource leaks in SFCB detected by Coverity
	(patch by John Powell)

2008-12-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 2316307 ] SFCB segfaults on missing instance file
	(based on patch by Kristi Schettler)
	
2008-12-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.h:
	[ 2433594 ] sfcb causing 'unaligned access' errors on IA64
	(patch by Klaus Kampf)

2008-12-12 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimslpSLP.c 
	[ 2390523 ] buffer overrun in cimslpSLP.c
	(patch by John Powell)
